src/shared/components/hero-section/index.module.css
@import "shared/styles/imports/variables.css";
@import "shared/styles/imports/custom-medias.css";

@keyframes orbit {
    from { transform: rotateZ(0deg); }
    to { transform: rotateZ(360deg); }
}

@keyframes pulse {
    0% { transform: translateY(0); }
    100% { transform: translateY(-10px); }
}

:root {
    --info-transition-duration: 1500ms;
}

.animationOff .wrapperContainer .container {
    & .orbitContainer .orbits {
        & .outsideRing {
            animation-play-state: paused;
        }

        & .middleRing {
            animation-play-state: paused;
        }

        & .insideRing {
            animation-play-state: paused;
        }
    }

    & .content .arrowUp {
        animation-play-state: paused;
    }
}

.wrapperContainer {
    min-height: 100vh;
}

.container {
    position: fixed;
    width: 100%;
    min-height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    background: var(--color-dark-blue);
    color: var(--color-white);

    & .localesBar {
        position: absolute;
        top: 0;
        width: 100%;
        z-index: 2;
    }

    & .orbitContainer {
        position: absolute;
        top: -7%;
        width: 100%;
        height: 100%;
        z-index: 0;
        overflow: hidden;
        display: flex;
        justify-content: center;
        align-items: center;

        & .orbits {
            position: relative;
            width: 80%;
            height: 80%;
            display: flex;
            justify-content: center;
            align-items: center;

            & .outsideRing,
            & .middleRing,
            & .insideRing {
                position: absolute;
                width: 100%;
                height: 100%;
                display: flex;
                align-items: center;

                & svg {
                    width: 100%;
                    height: auto;
                }
            }

            & .outsideRing {
                animation: orbit 300s infinite linear;
            }

            & .middleRing {
                animation: orbit 200s infinite linear;
            }

            & .insideRing {
                animation: orbit 120s infinite linear;
            }

        }
    }

    & .content {
        width: var(--container-width);
        max-width: var(--max-container-width);
        height: 100%;
        z-index: 1;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;

        & svg {
            width: 29%;
            height: auto;
            margin-bottom: 1.5%;
        }

        & h1 {
            font-weight: var(--typography-text-weight-semibold);
            text-transform: unset;
            text-align: center;
            line-height: var(--line-height-large);
        }

        & p {
            font-size: var(--typography-text-size);
            font-weight: var(--typography-text-weight-light);
            text-align: center;
            line-height: var(--line-height-medium);
        }

        & .infoContainer {
            width: 100%;
            margin-top: 2%;
            padding-bottom: calc(var(--bottom-half-height) * 2);
            transform: scale(1);
            opacity: 1;
            color: var(--color-light-blue);
            font-family: var(--typography-roboto-text-font);
            font-size: var(--typography-text-size-mobile);
            transition: opacity var(--info-transition-duration) ease, transform var(--info-transition-duration) ease;

            &.error {
                color: var(--color-error);
            }

            &.hidden {
                transform: scale(0.9);
                opacity: 0;
                transition: all 0ms;
            }

            & div {
                width: 100%;
                display: flex;
                flex-wrap: wrap;
                justify-content: center;
                align-items: center;

                & span {
                    margin-right: 4%;
                }
            }
        }

        & .arrowUp {
            width: 35px;
            height: 35px;
            animation: pulse 1s infinite alternate;

            & svg {
                width: 100%;
                height: auto;

                & path {
                    transition: fill var(--transition-default-duration) ease;
                }
            }

            &:hover {
                cursor: pointer;
                animation-play-state: paused;

                & svg path {
                    fill: var(--color-white);
                }
            }
        }
    }
}

@media (--layout-lte-small) {
    .container {
        position: relative;

        & .orbitContainer {
            display: none;
        }

        & .content {
            width: var(--container-width-mobile);
            padding-top: 30%;

            & svg {
                width: 75%;
                max-width: 300px;
                margin-bottom: 10%;
            }

            & p {
                font-size: var(--typography-text-size);
            }

            & .infoContainer div {
                flex-direction: column;

                & span {
                    margin-top: 12px;
                }
            }

            & .arrowUp {
                margin-bottom: 10%;
            }
        }
    }
}

@media (--layout-gte-xxlarge) {
    .container {
        & .orbitContainer .orbits {
            width: 60%;
            height: 60%;
        }
    }
}

